# ai-peer-review

./: .env.example  .gitignore  API_REFACTOR.md  CLAUDE.md  DEGREE_EDUCATION_GUIDE.md  README.md  USAGE_EXAMPLES.md  debug_model_mapping.py  degree_education_review.py  example_usage.py  pyproject.toml  test_api.py
configs/: README_degree_education.md  degree_education_journal.json  degree_education_journal_detailed.json
papers/美国研究生和本科生资助体系特征的比较及启示/: concerns_table.csv  meta_review.md  results.json  review_claude-3-7-sonnet-20250219-thinking.md  review_deepseek-r1.md  review_doubao-seed-1-6-thinking-250615.md  review_gemini-2.5-pro.md  review_gpt-5-2025-08-07.md  review_o3-2025-04-16.md  review_qwen3-235b-a22b-think.md
src/ai_peer_review/: cli.py  review.py
src/ai_peer_review/llm_clients/: anthropic_client.py  base_client.py  deepseek_client.py  google_client.py  llama_client.py  openai_client.py
src/ai_peer_review/utils/: config.py  pdf.py
tests/: test_cli.py  test_config.py  test_pdf.py  test_review.py
tests/llm_clients/: test_anthropic_client.py  test_base_client.py  test_openai_client.py
